# unknot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: Dependencies.cmake
resources/: goeritz.json  ochiai.json  thistlethwaite.json
src/: constants.hh  knot.hh  plan.hh  unknot.cc  util.hh  visualize.hh
